Fix issues in package which prevent build

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,37 @@ lib/pf/pfcmd/pfcmd_pregrammar.pm
 logs/
 var/
 raddb/sites-enabled/
+
+#debuild output
+build-stamp
+configure-stamp
+debian/files
+debian/packetfence-doc.debhelper.log
+debian/packetfence-doc.substvars
+debian/packetfence-doc/
+debian/packetfence-pfcmd-suid.debhelper.log
+debian/packetfence-pfcmd-suid.substvars
+debian/packetfence-pfcmd-suid/
+debian/packetfence-remote-arp-sensor.debhelper.log
+debian/packetfence-remote-arp-sensor.postinst.debhelper
+debian/packetfence-remote-arp-sensor.postrm.debhelper
+debian/packetfence-remote-arp-sensor.prerm.debhelper
+debian/packetfence-remote-arp-sensor.substvars
+debian/packetfence-remote-arp-sensor/
+debian/packetfence-remote-snort-sensor.debhelper.log
+debian/packetfence-remote-snort-sensor.postinst.debhelper
+debian/packetfence-remote-snort-sensor.postrm.debhelper
+debian/packetfence-remote-snort-sensor.prerm.debhelper
+debian/packetfence-remote-snort-sensor.substvars
+debian/packetfence-remote-snort-sensor/
+debian/packetfence-test.debhelper.log
+debian/packetfence-test.substvars
+debian/packetfence-test/
+debian/packetfence.debhelper.log
+debian/packetfence.logrotate
+debian/packetfence.postinst.debhelper
+debian/packetfence.postrm.debhelper
+debian/packetfence.prerm.debhelper
+debian/packetfence.substvars
+debian/packetfence/
+
