--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 3.8.4
 Vcs-Git: git://github.com/inverse-inc/packetfence.git
 Vcs-browser: https://github.com/inverse-inc/packetfence/
 Homepage: http://www.packetfence.org/
+XS-Testsuite: autopkgtest
 
 Package: packetfence
 Architecture: all
